# warp

./: .gitignore  CITATION  CMakeLists.txt  Doxyfile  LCRNG.cuh  LICENSE  Makefile  README.md  absorb.cu  ace.pyx  benchmarks.cpp  binary_search.h  box.cu  box_mesh.cu  camera.cu  check_cuda.h  check_pointers.cu  compare_spectra.py  copy_points.cu  cscatter.cu  cylinder.cu  cylinder_mesh.cu  datadef.h  device_copies.cu  device_copies.h  doxyfile  escatter.cu  find_E_grid_index.cu  find_E_grid_index_quad.cu  fission.cu  fission_old.cu  fission_source.py  flip_done.cu  footer.tex  godiva_det0.m  header.tex  hex.cu  hex_mesh.cu  hits.cu  hits_mesh.cu  (+59 more)
test/: CMakeLists.txt  primitive_test.cpp  primitive_test.h  wgeometry_test.h  whistory_test.h
userguide/: userguide.tex
userguide/graphics/: warp-vec.eps
